# trabalho_final

./: CMakeLists.txt  package.xml
include/trabalho_final/: ControladorDeDeslocamento.h  Conversor.h  EvitadorDeColisoes.h
launch/: trabalho_final.launch
src/: controlador_de_deslocamento.cpp  conversor.cpp  evitador_de_colisoes.cpp  setpoint_node.cpp
src/trabalho_final/: ControladorDeDeslocamento.cpp  Conversor.cpp  EvitadorDeColisoes.cpp
